--- a/components/pages/Home.html
+++ b/components/pages/Home.html
@@ -15,24 +15,37 @@
 <link rel="stylesheet" href="../../css/product.css">
 <link rel="stylesheet" href="../../css/products.css">
 <link rel="stylesheet" href="../../css/login-register.css">
+<link rel="stylesheet" href="../../css/reductionItemsBy50percent.css">
+<link rel="stylesheet" href="../../css/newYearReduction.css">
+<link rel="stylesheet" href="../../css/searchResults.css">
+<link rel="stylesheet" href="../../css/movedImgSection.css">
+<link rel="stylesheet" href="../../css/userCarts.css">
+<!-- Include Font Awesome in your HTML -->
+<link
+  rel="stylesheet"
+  href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css"
+/>
+
+
 
 <!-- Bootstrap JS (optional, for dropdowns, modals, etc.) -->
     <title>Document</title>
 </head>
 <body>
-    <div>
+  <div class="allContent-wrapper">
+    <div class="allContent-container">
+      <div class="allContent-container">
         <app-header></app-header>
+      </div>
+      <main id="app" class="container mt-4"></main>
     </div>
-    <main id="app" class="container mt-4"></main>
-    <!-- SCRIPTS -->
-      <script
-    src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"
-  ></script>
 
+    <!-- SCRIPTS -->
+      <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"></script>
   <!-- Your JS -->
   <script src="../../javascript/header.js"></script>
   <script type="module" src="../../javascript/home.js"></script>
   <script type="module" src="../../javascript/Slider.js"></script>
-  <script type="module" src="../../javascript/smallResolution/productsSmall.js"></script>
+  <script type="module" src="../../javascript/smallResolution/mobileFilter.js"></script>
 </body>
 </html>
